# ROS-VC

./: README.md  documentacao_tecnica.md  image_processor.py  turtle_draw.py
install/: local_setup.sh  setup.sh
install/turtle_draw_pkg/lib/turtle_draw_pkg/: turtle_draw
install/turtle_draw_pkg/share/turtle_draw_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/turtle_draw_pkg/: package.xml  setup.cfg  setup.py
src/turtle_draw_pkg/turtle_draw_pkg/: turtle_draw.py
